2004-03-17  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/ia64/ioperm.c (_iopl): Match EPERM error
	the x86 code produces in case of mission permissions.
	Patch by Bernd Schmidt <bernds@redhat.com>.

	* resolv/netdb.h: Define AI_IDN_ALLOW_UNASSIGNED,
	AI_IDN_USE_STD3_ASCII_RULES, NI_IDN_ALLOW_UNASSIGNED, and
	NI_IDN_USE_STD3_ASCII_RULES.
	* inet/getnameinfo.c (getnameinfo): Implement handling of
	NI_IDN_ALLOW_UNASSIGNED and NI_IDN_USE_STD3_ASCII_RULES.
	* sysdeps/posix/getaddrinfo.c (gaih_inet): Implement handling of
	AI_IDN_ALLOW_UNASSIGNED and AI_IDN_USE_STD3_ASCII_RULES.

2004-03-17  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/x86_64/hp-timing.h (HP_TIMING_NOW): Make asm volatile.

2004-03-16  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/powerpc/powerpc32/fpu/__longjmp.S: Spelling.
	(JB_SIZE): Undefine before including __longjmp-common.S again.
	* sysdeps/powerpc/powerpc32/fpu/setjmp.S: Spelling.
	(JB_SIZE): Undefine before including setjmp-common.S again.
	* sysdeps/powerpc/powerpc64/bsd-_setjmp.S: Spelling.
	* sysdeps/powerpc/powerpc64/bsd-setjmp.S: Spelling.
	* sysdeps/powerpc/powerpc32/bsd-_setjmp.S: Spelling.
	* sysdeps/powerpc/powerpc32/bsd-setjmp.S: Spelling.
	* sysdeps/powerpc/sigjmp.c: Spelling.

2004-03-16  Ulrich Drepper  <drepper@redhat.com>

	* include/ctype.h: For libc, define isdigit, isdigit_l, and
	__isdigit_l as simple comparison macros.
	* include/wctype.h: For libc, define iswdigit, iswdigit_l, and
	__iswdigit_l as simple comparison macros.
	* wctype/wcfuncs_l.c: #undef iswdigit and __iswdigit.

2004-03-15  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/sparc/fpu/bits/mathinline.h: Restore missing #ifdef.
	Patch by Richard Henderson.

2004-03-16  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/generic/strtold_l.c (STRING_TYPE, STRTOLD, __STRTOLD,
	__STRTOD, INTERNAL, INTERNAL1): Define, use them.
	[! USE_WIDE_CHAR] (INTERNAL (__STRTOLD)): Add libc_hidden_def.

	* inet/getnameinfo.c: Include stdlib.h.
